# openapi.json
@@ -13,6 +13,10 @@
     "components": {
         "schemas": {
             "Board": {
+                "required": [
+                    "id",
+                    "title"
+                ],
                 "type": "object",
                 "properties": {
                     "id": {
@@ -32,33 +36,171 @@
                         "example": "Test board description"
                     }
                 }
+            },
+            "Boards": {
+                "type": "array",
+                "items": {
+                    "$ref": "#/components/schemas/Board"
+                }
+            },
+            "BoardList": {
+                "type": "object",
+                "properties": {
+                    "total": {
+                        "type": "integer",
+                        "example": 50
+                    },
+                    "page": {
+                        "type": "integer",
+                        "example": 1
+                    },
+                    "pageSize": {
+                        "type": "integer",
+                        "example": 10
+                    },
+                    "totalPages": {
+                        "type": "integer",
+                        "example": 5
+                    },
+                    "rows": {
+                        "type": "array",
+                        "items": {
+                            "$ref": "#/components/schemas/Board"
+                        }
+                    }
+                }
             }
         }
     },
     "paths": {
-        "/boards": {
+        "/boards/find": {
             "get": {
-                "description": "List boards",
+                "description": "Find boards",
                 "tags": [
                     "boards"
                 ],
-                "operationId": "v1.boards.get",
+                "operationId": "v1.boards.find",
                 "responses": {
                     "200": {
-                        "description": "Board",
+                        "description": "Boards",
                         "content": {
                             "application/json": {
                                 "schema": {
                                     "type": "array",
                                     "items": {
-                                        "$ref": "#/components/schemas/Board"
+                                        "$ref": "#/components/schemas/Boards"
                                     }
                                 }
                             }
                         }
                     }
                 }
-            },
+            }
+        },
+        "/boards": {
+            "get": {
+                "description": "List boards with pages",
+                "tags": [
+                    "boards"
+                ],
+                "operationId": "v1.boards.list",
+                "parameters": [
+                    {
+                        "in": "query",
+                        "name": "page",
+                        "schema": {
+                            "type": "integer"
+                        },
+                        "example": 1,
+                        "required": false,
+                        "description": "Page number"
+                    },
+                    {
+                        "in": "query",
+                        "name": "pageSize",
+                        "schema": {
+                            "type": "integer"
+                        },
+                        "example": 10,
+                        "required": false,
+                        "description": "Page size"
+                    },
+                    {
+                        "in": "query",
+                        "name": "sort",
+                        "schema": {
+                            "type": "string"
+                        },
+                        "example": "title,-createdAt",
+                        "required": false,
+                        "description": "Sorting"
+                    },
+                    {
+                        "in": "query",
+                        "name": "fields",
+                        "schema": {
+                            "type": "string"
+                        },
+                        "example": "title,description",
+                        "required": false,
+                        "description": "Filtered fields"
+                    },
+                    {
+                        "in": "query",
+                        "name": "populate",
+                        "schema": {
+                            "type": "string"
+                        },
+                        "example": "owner",
+                        "required": false,
+                        "description": "Populated fields"
+                    },
+                    {
+                        "in": "query",
+                        "name": "search",
+                        "schema": {
+                            "type": "string"
+                        },
+                        "required": false,
+                        "description": "Search text"
+                    },
+                    {
+                        "in": "query",
+                        "name": "searchFields",
+                        "schema": {
+                            "type": "string"
+                        },
+                        "required": false,
+                        "description": "Fields for searching"
+                    },
+                    {
+                        "in": "query",
+                        "name": "query",
+                        "schema": {
+                            "type": "object"
+                        },
+                        "required": false,
+                        "description": "Custom query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Boards",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "array",
+                                    "items": {
+                                        "$ref": "#/components/schemas/BoardList"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/board": {
             "post": {
                 "description": "Create a new board",
                 "tags": [
@@ -89,6 +231,122 @@
                 "responses": {
                     "200": {
                         "description": "Created board",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Board"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/boards/{id}": {
+            "get": {
+                "description": "Get a board by ID",
+                "tags": [
+                    "boards"
+                ],
+                "operationId": "v1.boards.get",
+                "parameters": [
+                    {
+                        "in": "path",
+                        "name": "id",
+                        "schema": {
+                            "type": "string"
+                        },
+                        "example": "5bf18691fe972d2464a7ba14",
+                        "required": true,
+                        "description": "Board ID"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Found board",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Board"
+                                }
+                            }
+                        }
+                    }
+                }
+            },
+            "put": {
+                "description": "Update a board by ID",
+                "tags": [
+                    "boards"
+                ],
+                "operationId": "v1.boards.update",
+                "parameters": [
+                    {
+                        "in": "path",
+                        "name": "id",
+                        "schema": {
+                            "type": "string"
+                        },
+                        "example": "5bf18691fe972d2464a7ba14",
+                        "required": true,
+                        "description": "Board ID"
+                    }
+                ],
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "type": "object",
+                                "properties": {
+                                    "title": {
+                                        "type": "string"
+                                    },
+                                    "description": {
+                                        "type": "string"
+                                    }
+                                }
+                            },
+                            "example": {
+                                "title": "New board",
+                                "description": "My new board"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Found board",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Board"
+                                }
+                            }
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "description": "Delete a board by ID",
+                "tags": [
+                    "boards"
+                ],
+                "operationId": "v1.boards.remove",
+                "parameters": [
+                    {
+                        "in": "path",
+                        "name": "id",
+                        "schema": {
+                            "type": "string"
+                        },
+                        "example": "5bf18691fe972d2464a7ba14",
+                        "required": true,
+                        "description": "Board ID"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Found board",
                         "content": {
                             "application/json": {
                                 "schema": {
